Fixed popup flickering issue but at the cost of elements in the popup being clickable.

--- a/imports/ui/components/SymbolPopup/index.scss
+++ b/imports/ui/components/SymbolPopup/index.scss
@@ -10,6 +10,7 @@
   box-shadow: 4px 4px 2px grey;
   border-radius: 4px;
   opacity: 0.7;
+  pointer-events: none;
   em { 
     font-style: normal;
     font-weight: bold;
